Stage 4 Partial Edit Re-submission

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <section class="staff" id="staff">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
-          <ul class="staff__card">
+          <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
                 <h3 class="card__title">Introduction to Algorithms</h3>
@@ -294,7 +294,7 @@
         <div class="footer__columns">
           <div class="footer__column footer__logo">
             <img
-              class="footer__logo-image"
+              class="footer__logo"
               src="./images/logo_white.png"
               alt="White Practicum Logo"
             />
@@ -324,8 +324,8 @@
             </ul>
           </div>
         </div>
-        <div class="footer__copyright">
-          <p class="footer__copyright-text">2023 Tim Faulkner</p>
+        <div>
+          <p class="footer__copyright">2023 Tim Faulkner</p>
         </div>
       </footer>
     </div>
