--- a/index.html
+++ b/index.html
@@ -310,23 +310,29 @@
             <h2 class="footer__column-heading">Social Media</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <img src="./images/facebook_white.svg" alt="Facebook Logo" />
-                <a class="footer__column-link" href="#">Facebook</a>
+                <a class="footer__column-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="Facebook Logo"
+                  />
+                  Facebook
+                </a>
               </li>
               <li class="footer__list-item">
-                <img
-                  class="footer__social-icon"
-                  src="./images/instagram_white.svg"
-                  alt="Instagram Logo"
-                />
-                <a class="footer__column-link" href="#">Instagram</a>
+                <a class="footer__column-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="Instagram Logo"
+                  />
+                  Instagram
+                </a>
               </li>
             </ul>
           </div>
         </div>
-        <div>
-          <p class="footer__copyright">2023 Tim Faulkner</p>
-        </div>
+        <p class="footer__copyright">2023 Tim Faulkner</p>
       </footer>
     </div>
   </body>
