Stage 4 Code Fixed After Alex Review

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             class="logo"
           />
           <ul class="nav__links">
-            <li>
-              <a class="nav__link" href="#staff">Staff picks</a>
-            </li>
+            <!-- Arranged in order of presentation on page, per reviewer suggestion -->
             <li>
               <a class="nav__link" href="#events">Events</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#staff">Staff picks</a>
             </li>
             <li>
               <a class="nav__link" href="#membership">Become a member</a>
@@ -292,7 +293,7 @@
       </main>
       <footer class="footer" id="contacts">
         <div class="footer__columns">
-          <div class="footer__column footer__logo">
+          <div>
             <img
               class="footer__logo"
               src="./images/logo_white.png"
