--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       </main>
       <footer class="footer" id="contacts">
         <div class="footer__columns">
-          <div>
+          <div class="footer__column">
             <img
               class="footer__logo"
               src="./images/logo_white.png"
